syntax = "proto3";
package emWell;
import "google/api/annotations.proto";
option go_package = "./proto";

service EmWellService {
  rpc GetEmotionalStatistics (GetEmotionalStatisticsRequest) returns (GetEmotionalStatisticsResponse) {
    option (google.api.http) = {
      get: "/emotional/statistics"
    };
  }
}

message GetEmotionalStatisticsRequest {
  string password = 1;
}

message GetEmotionalStatisticsResponse {
  string chart = 1;
}
